--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.5",
     "antd": "^5.24.9",
+    "framer-motion": "^12.17.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^7.5.3",
     "tailwindcss": "^4.1.5"
   },
