--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-masonry-css": "^1.0.16",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^7.5.3",
     "tailwindcss": "^4.1.5"
   },
