--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@tailwindcss/vite": "^4.1.5",
     "antd": "^5.24.9",
     "framer-motion": "^12.17.3",
+    "gsap": "^3.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-masonry-css": "^1.0.16",
     "react-resizable": "^3.0.5",
